# monkey-d-engine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  Sandbox_DEBUG.lnk
assets/: monkey.gltf  monkey_chad.gltf
assets/shaders/: base.frag.spv  base.vert  base.vert.spv
engine/: CMakeLists.txt
engine/include/: Context.h  Engine.h
engine/include/Components/: Camera.h  Component.h  MeshRenderer.h
engine/include/Core/3D/: Geometry.h
engine/include/Core/OS/: Time.h
engine/include/Core/System/: SystemBase.h  SystemLocator.h
engine/include/Systems/: GraphicsSystem.h  SceneSystem.h
engine/src/: Context.h  Engine.cpp  Engine.h
engine/src/Components/: Camera.cpp  Component.cpp  Component.h  MeshRenderer.cpp  MeshRenderer.h  Renderer.cpp  Renderer.h
engine/src/Core/3D/: Geometry.cpp  Geometry.h  Material.cpp  Material.h  Shader.cpp  Shader.h
engine/src/Core/System/: SystemBase.cpp  SystemLocator.cpp  SystemManager.cpp  SystemManager.h
engine/src/Systems/: GraphicsSystem.cpp  GraphicsSystem.h  SceneSystem.cpp  SceneSystem.h
raddbg/: debug_project
sandbox/: CMakeLists.txt
sandbox/include/Components/: CameraController.h
sandbox/src/: main.cpp
sandbox/src/Components/: CameraController.cpp
shaders/: base.frag  base.vert
vendors/glm/: LICENSE
vendors/sdl/: LICENSE
